[gd_scene load_steps=5 format=3 uid="uid://b65066fdcd4jn"]

[ext_resource type="Script" path="res://Scripts/Menus/Controles.gd" id="1_6swyr"]
[ext_resource type="PackedScene" uid="uid://0yeadoaxp15h" path="res://Scenes/Menus/backgroud.tscn" id="2_lj23f"]
[ext_resource type="Texture2D" uid="uid://b8d30xdqnq28b" path="res://assets/sprites/buttons/template_button.png" id="2_oubti"]
[ext_resource type="Texture2D" uid="uid://crdqb8qkan56e" path="res://assets/sprites/buttons/back_button.png" id="3_ih4ni"]

[node name="Controles" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_6swyr")

[node name="TextEdit" type="Label" parent="."]
layout_mode = 0
offset_left = 416.0
offset_top = 208.0
offset_right = 554.0
offset_bottom = 279.0
text = "Up"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextEdit6" type="Label" parent="."]
layout_mode = 0
offset_left = 928.0
offset_top = 216.0
offset_right = 1066.0
offset_bottom = 287.0
text = "Restart"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextEdit2" type="Label" parent="."]
layout_mode = 0
offset_left = 424.0
offset_top = 352.0
offset_right = 562.0
offset_bottom = 423.0
text = "Down"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextEdit3" type="Label" parent="."]
layout_mode = 0
offset_left = 416.0
offset_top = 496.0
offset_right = 554.0
offset_bottom = 567.0
text = "Left"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextEdit4" type="Label" parent="."]
layout_mode = 0
offset_left = 928.0
offset_top = 368.0
offset_right = 1066.0
offset_bottom = 439.0
text = "Right"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextEdit5" type="Label" parent="."]
layout_mode = 0
offset_left = 928.0
offset_top = 496.0
offset_right = 1066.0
offset_bottom = 567.0
text = "Action"
horizontal_alignment = 1
vertical_alignment = 1

[node name="up" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 560.0
offset_top = 200.0
offset_right = 880.0
offset_bottom = 335.0
scale = Vector2(0.800014, 0.770385)
texture_normal = ExtResource("2_oubti")

[node name="down" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 560.0
offset_top = 344.0
offset_right = 880.0
offset_bottom = 479.0
scale = Vector2(0.799865, 0.771253)
texture_normal = ExtResource("2_oubti")

[node name="left" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 560.0
offset_top = 488.0
offset_right = 880.0
offset_bottom = 623.0
scale = Vector2(0.801085, 0.769806)
texture_normal = ExtResource("2_oubti")

[node name="right" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1072.0
offset_top = 344.0
offset_right = 1392.0
offset_bottom = 479.0
scale = Vector2(0.800273, 0.76844)
texture_normal = ExtResource("2_oubti")

[node name="action" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1072.0
offset_top = 488.0
offset_right = 1392.0
offset_bottom = 623.0
scale = Vector2(0.799363, 0.771072)
texture_normal = ExtResource("2_oubti")

[node name="restart" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1072.0
offset_top = 200.0
offset_right = 1392.0
offset_bottom = 335.0
scale = Vector2(0.799759, 0.769185)
texture_normal = ExtResource("2_oubti")

[node name="Retour" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 760.0
offset_top = 712.0
offset_right = 1080.0
offset_bottom = 847.0
texture_normal = ExtResource("3_ih4ni")

[node name="Label_up" type="Label" parent="."]
layout_mode = 0
offset_left = 560.0
offset_top = 200.0
offset_right = 872.0
offset_bottom = 335.0
scale = Vector2(0.820847, 0.77162)
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_down" type="Label" parent="."]
layout_mode = 0
offset_left = 560.0
offset_top = 344.0
offset_right = 817.0
offset_bottom = 440.0
scale = Vector2(0.995877, 1.08347)
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_left" type="Label" parent="."]
layout_mode = 0
offset_left = 560.0
offset_top = 488.0
offset_right = 830.0
offset_bottom = 594.0
scale = Vector2(0.948341, 0.986719)
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_right" type="Label" parent="."]
layout_mode = 0
offset_left = 1072.0
offset_top = 344.0
offset_right = 1340.0
offset_bottom = 448.0
scale = Vector2(0.955312, 1.00123)
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_action" type="Label" parent="."]
layout_mode = 0
offset_left = 1072.0
offset_top = 488.0
offset_right = 1342.0
offset_bottom = 594.0
scale = Vector2(0.948548, 0.984526)
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_restart" type="Label" parent="."]
layout_mode = 0
offset_left = 1072.0
offset_top = 200.0
offset_right = 1330.0
offset_bottom = 286.0
scale = Vector2(0.992806, 1.20569)
horizontal_alignment = 1
vertical_alignment = 1

[node name="Backgroud" parent="." instance=ExtResource("2_lj23f")]
z_index = -1

[connection signal="pressed" from="up" to="." method="_on_up_pressed"]
[connection signal="pressed" from="down" to="." method="_on_down_pressed"]
[connection signal="pressed" from="left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="action" to="." method="_on_action_pressed"]
[connection signal="pressed" from="restart" to="." method="_on_action_pressed"]
[connection signal="pressed" from="Retour" to="." method="_on_retour_pressed"]
